hphp/hack/test/typecheck/expression_trees/collection_error.php.exp
ERROR: File "collection_error.php", line 9, characters 14-20:
Initializers of `vec`, `dict` and `keyset` should use `[...]` instead of `{...}`. (Parsing[1002])
ERROR: File "collection_error.php", line 12, characters 14-42:
Collections in expression trees must have `key => value` entries (Parsing[1002])
ERROR: File "collection_error.php", line 6, characters 14-22:
Unbound name: `wrongCtor` (an object type) (Naming[2049])
ERROR: File "collection_error.php", line 7, characters 14-35:
Could not find `exampleKeyedCollection`. (Naming[2006])
  File "expr_tree.php", line 422, characters 16-37:
  Did you mean `~~E~~xampleKeyedCollection` instead (which only differs by case)?
ERROR: File "collection_error.php", line 11, characters 14-23:
Unbound name: `symbolType` (an object type) (Naming[2049])
ERROR: File "collection_error.php", line 8, characters 14-16:
No static method `__makeType` in `Map` (Typing[4090])
  File "collections/Map.hhi", line 635, characters 28-36:
  Did you mean `fromArray` instead?
  File "collections/Map.hhi", line 57, characters 15-17:
  Declaration of `Map` is here
ERROR: File "collection_error.php", line 9, characters 14-17:
No static method `__makeType` in `dict` (Typing[4090])
  File "hackarray.hhi", line 32, characters 24-27:
  Declaration of `dict` is here
ERROR: File "collection_error.php", line 10, characters 14-19:
No static method `__makeType` in `Vector` (Typing[4090])
  File "collections/Vector.hhi", line 714, characters 28-36:
  Did you mean `fromArray` instead?
  File "collections/Vector.hhi", line 48, characters 15-20:
  Declaration of `Vector` is here
